--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.16",
     "next": "^14.0.4",
+    "octokit": "^3.1.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "octokit": "^3.1.2"
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
-    "typescript": "^5.3.3",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^14.0.4"
+    "eslint-config-next": "^14.0.4",
+    "typescript": "^5.3.3"
   }
 }
